--- a/app/globals.css
+++ b/app/globals.css
@@ -49,17 +49,11 @@
   }
 }
 
-@layer components {
-  .input-with-subtle-focus {
-    @apply focus-visible:ring-1 focus-visible:ring-blue-200 dark:focus-visible:ring-blue-800;
-  }
-}
- 
 @layer base {
   * {
     @apply border-[hsl(var(--border))];
   }
   body {
-    @apply bg-[hsl(var(--background))] text-[hsl(var(--foreground))];
+    @apply bg-background text-foreground;
   }
 }
